--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/material": "^5.15.2",
+    "firebase": "^10.7.1",
+    "framer-motion": "^10.16.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.12.0",
+    "sass": "^1.68.0"
   },
   "devDependencies": {
     "@types/react": "18.2.15",
